--- a/src/iTin.Core.Models.csproj
+++ b/src/iTin.Core.Models.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\iTin.Core.Drawing\src\iTin.Core.Drawing.csproj" />
     <ProjectReference Include="..\..\iTin.Core.IO\src\iTin.Core.IO.csproj" />
+    <ProjectReference Include="..\..\iTin.Core.Models.Data\src\iTin.Core.Models.Data.csproj" />
     <ProjectReference Include="..\..\iTin.Core\src\iTin.Core.csproj" />
   </ItemGroup>
 
